examples/test/testpolicy11133.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11133
  namespace: namespace11
spec:
  podSelector:
    matchLabels:
      key7: value45
      key37: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value29
          key31: value4
          key29: value28
      podSelector:
        matchLabels:
          key28: value25
